<resources>
    <string name="app_name">emarket</string>
    <string name="e_market">E-Market</string>
    <string name="filters">Filters:</string>
    <string name="search">Search</string>
    <string name="select_filter">Select Filter</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="price">Price:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="total">Total:</string>
    <string name="complete">Complete</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="filter">Filter</string>
    <string name="model">Model</string>
    <string name="sort_by">Sort By</string>
    <string name="brand">Brand</string>
    <string name="old_to_new">Old to new</string>
    <string name="new_to_old">New to old</string>
    <string name="price_high_to_low">Price high to low</string>
    <string name="price_low_to_high">Price low to High</string>
</resources>