<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- AppBar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tvAppName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary_blue"
        android:paddingHorizontal="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_xlarge"
        android:paddingBottom="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/e_market"
        app:titleTextColor="@android:color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCartItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/margin_medium"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/cartSummaryLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        tools:listitem="@layout/item_cart_product" />

    <TextView
        android:id="@+id/tvEmptyCartMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/your_cart_is_empty"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small18"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/rvCartItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rvCartItems" />

    <LinearLayout
        android:id="@+id/cartSummaryLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:orientation="horizontal"
        android:padding="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/primary_blue"
                android:textSize="@dimen/text_size_small18" />

            <TextView
                android:id="@+id/tvTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="124124124 ₺"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small18"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btnComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_blue"
            android:paddingHorizontal="@dimen/margin_xlarge"
            android:paddingVertical="@dimen/margin_small"
            android:text="@string/complete"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
